--- a/src/Client/Shell/HDE.IpCamClientServer.Client.csproj
+++ b/src/Client/Shell/HDE.IpCamClientServer.Client.csproj
@@ -54,8 +54,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\ExecuteCmd.cs" />
-    <Compile Include="Commands\LoadSettingsCmd.cs" />
-    <Compile Include="Commands\TearDownCmd.cs" />
     <Compile Include="Controller\ClientController.cs" />
     <Compile Include="Model\ClientModel.cs" />
     <Compile Include="View\MainForm.cs">
@@ -112,7 +110,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ClientIcon.ico" />
-    <Content Include="HDE.IpCamClientServer.Client.xml">
+    <Content Include="Client.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
