--- a/src/Server/HDE.IpCamClientServer.Server.Core/HDE.IpCamClientServer.Server.Core.csproj
+++ b/src/Server/HDE.IpCamClientServer.Server.Core/HDE.IpCamClientServer.Server.Core.csproj
@@ -95,7 +95,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ImageProcessingHandlers\IHandler.cs" />
+    <Compile Include="ImageProcessingHandlers\IInterceptor.cs" />
     <Compile Include="ImageProcessingHandlers\MovementHandler.cs" />
+    <Compile Include="ImageProcessingHandlers\NullInterceptor.cs" />
     <Compile Include="Model\ServerSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerWorker.cs" />
