--- a/src/Server/HDE.IpCamClientServer.Server.ServerC/HDE.IpCamClientServer.Server.ServerC.csproj
+++ b/src/Server/HDE.IpCamClientServer.Server.ServerC/HDE.IpCamClientServer.Server.ServerC.csproj
@@ -84,8 +84,10 @@
       <HintPath>..\..\Bin\HDE.Platform.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -96,10 +98,19 @@
     <Compile Include="Commands\LoadSettingsCmd.cs" />
     <Compile Include="Commands\StartCmd.cs" />
     <Compile Include="Commands\StopCmd.cs" />
+    <Compile Include="Controller\DebugInterceptor.cs" />
+    <Compile Include="Controller\OperationMode.cs" />
     <Compile Include="Controller\ServerController.cs" />
     <Compile Include="Model\ServerModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\DebugViewForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\DebugViewForm.Designer.cs">
+      <DependentUpon>DebugViewForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\IDebugView.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Common\HDE.IpCamClientServer.Common\HDE.IpCamClientServer.Common.csproj">
@@ -119,6 +130,11 @@
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="View\DebugViewForm.resx">
+      <DependentUpon>DebugViewForm.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
