--- a/src/Server/HDE.IpCamClientServer.Server.ServerC/app.config
+++ b/src/Server/HDE.IpCamClientServer.Server.ServerC/app.config
@@ -1,5 +1,9 @@
 <?xml version="1.0"?>
 <configuration>
+  <appSettings>
+    <!-- When operation mode is debug, additional windows are opened during Image processing. -->
+    <add key="OperationMode" value="DEBUG" />
+  </appSettings>
   <startup useLegacyV2RuntimeActivationPolicy="true">
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/>
   </startup>
