--- a/src/Server/HDE.IpCamClientServer.Server.Core/HDE.IpCamClientServer.Server.Core.csproj
+++ b/src/Server/HDE.IpCamClientServer.Server.Core/HDE.IpCamClientServer.Server.Core.csproj
@@ -96,8 +96,10 @@
   <ItemGroup>
     <Compile Include="ImageProcessingHandlers\IHandler.cs" />
     <Compile Include="ImageProcessingHandlers\IInterceptor.cs" />
+    <Compile Include="ImageProcessingHandlers\ImageHelper.cs" />
     <Compile Include="ImageProcessingHandlers\MovementHandler.cs" />
     <Compile Include="ImageProcessingHandlers\NullInterceptor.cs" />
+    <Compile Include="ImageProcessingHandlers\SpagnoloMovementDetector.cs" />
     <Compile Include="Model\ServerSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerWorker.cs" />
