* Security on Streets-33264 in progress

--- a/src/Server/HDE.IpCamClientServer.Server.Core/HDE.IpCamClientServer.Server.Core.csproj
+++ b/src/Server/HDE.IpCamClientServer.Server.Core/HDE.IpCamClientServer.Server.Core.csproj
@@ -96,12 +96,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ImageProcessingHandlers\ArrayHelper.cs" />
+    <Compile Include="ImageProcessingHandlers\Gray\GrayScaleImageHelper.cs" />
+    <Compile Include="ImageProcessingHandlers\Gray\RadiometricSimilarityImage.cs" />
     <Compile Include="ImageProcessingHandlers\IHandler.cs" />
     <Compile Include="ImageProcessingHandlers\IInterceptor.cs" />
     <Compile Include="ImageProcessingHandlers\ImageHelper.cs" />
+    <Compile Include="ImageProcessingHandlers\MovementDetectors\JulioClaudioSoraiaMovementDetector.cs" />
+    <Compile Include="ImageProcessingHandlers\MovementDetectors\MovementDetectorBase.cs" />
     <Compile Include="ImageProcessingHandlers\MovementHandler.cs" />
     <Compile Include="ImageProcessingHandlers\NullInterceptor.cs" />
-    <Compile Include="ImageProcessingHandlers\SpagnoloMovementDetector.cs" />
+    <Compile Include="ImageProcessingHandlers\MovementDetectors\SpagnoloMovementDetector.cs" />
     <Compile Include="Model\ServerSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerWorker.cs" />
