--- a/src/Server/HDE.IpCamClientServer.Server.Core/HDE.IpCamClientServer.Server.Core.csproj
+++ b/src/Server/HDE.IpCamClientServer.Server.Core/HDE.IpCamClientServer.Server.Core.csproj
@@ -108,6 +108,7 @@
     <Compile Include="ImageProcessingHandlers\NullInterceptor.cs" />
     <Compile Include="ImageProcessingHandlers\MovementDetectors\SpagnoloMovementDetector.cs" />
     <Compile Include="Model\ServerSettings.cs" />
+    <Compile Include="Profiling\ProfilerScene.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerWorker.cs" />
   </ItemGroup>
