+ SecurityOnStreets-33264 (Add Julio Cezar Silveira Jacques Jr Cl?audio Rosito Jung Soraia Raupp Musse) fixed

--- a/src/Server/HDE.IpCamClientServer.Server.ServerC/app.config
+++ b/src/Server/HDE.IpCamClientServer.Server.ServerC/app.config
@@ -3,7 +3,7 @@
   <appSettings>
     <!-- When operation mode is debug, additional windows are opened during Image processing. -->
     <add key="OperationMode" value="DEBUG" />
-    <add key="MovementDetector.Parameters" value=";DEBUG;" />
+    <add key="MovementDetector.Parameters" value="DEBUG;K=2;TrainingFrames=1200" />
   </appSettings>
   <startup useLegacyV2RuntimeActivationPolicy="true">
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/>
