--- a/src/Server/HDE.IpCamClientServer.Server.ServerC/app.config
+++ b/src/Server/HDE.IpCamClientServer.Server.ServerC/app.config
@@ -3,7 +3,7 @@
   <appSettings>
     <!-- When operation mode is debug, additional windows are opened during Image processing. -->
     <add key="OperationMode" value="DEBUG" />
-    <add key="MovementDetector.Parameters" value="DEBUG;K=1;TrainingFrames=600" />
+    <add key="MovementDetector.Parameters" value="DEBUG;K=3;TrainingFrames=600;MinimumDetectionWidthPixels=6;MinimumDetectionHeightPixels=4;MaximumDetectionWidthPixels=20;MaximumDetectionHeightPixels=100;" />
   </appSettings>
   <startup useLegacyV2RuntimeActivationPolicy="true">
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/>
