--- a/src/Server/HDE.IpCamClientServer.Server.ServerC/app.config
+++ b/src/Server/HDE.IpCamClientServer.Server.ServerC/app.config
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <configuration>
   <appSettings>
-    <!-- When operation mode is debug, additional windows are opened during Image processing. -->
+    <!-- When operation mode is debug, additional windows are opened during Image processing. //TODO: debug Llow=0.5;Lstd=0.05 -->
     <add key="OperationMode" value="DEBUG" />
-    <add key="MovementDetector.Parameters" value="DEBUG;K=3;TrainingFrames=600;MinimumDetectionWidthPixels=6;MinimumDetectionHeightPixels=4;MaximumDetectionWidthPixels=20;MaximumDetectionHeightPixels=100;" />
+    <add key="MovementDetector.Parameters" value="DEBUG;K=3;N=8;M=1;Llow=0.5;Lstd=0.05;Lncc=0.98;TrainingFrames=1000;MinimumDetectionWidthPixels=6;MinimumDetectionHeightPixels=4;MaximumDetectionWidthPixels=20;MaximumDetectionHeightPixels=100;" />
   </appSettings>
   <startup useLegacyV2RuntimeActivationPolicy="true">
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/>
