+ securityonstreets-33567 fixed (Add possibility instantiate filters via reflection)

--- a/src/Server/HDE.IpCamClientServer.Server.ServerC/app.config
+++ b/src/Server/HDE.IpCamClientServer.Server.ServerC/app.config
@@ -1,9 +1,26 @@
 <?xml version="1.0"?>
 <configuration>
   <appSettings>
-    <!-- When operation mode is debug, additional windows are opened during Image processing. //TODO: debug Llow=0.5;Lstd=0.05 -->
+    <!-- When operation mode is debug, additional windows are opened during Image processing. -->
     <add key="OperationMode" value="DEBUG" />
+    
+    <!-- Movement Detectors
+    
+    Expectations for classes
+    - can be instantiaated with constructor taking one argument - IInterceptor
+    
+    Possible movement detectors (uncomment the configuration you need):
+    - Siarhei Kuchuk Movement Detector
+    - Julio Claudio Soraia Movement Detector
+    -->
+    <!-- Siarhei Kuchuk Movement Detector -->
+    <add key="MovementDetector.Type" value="HDE.IpCamClientServer.Server.Core.ImageProcessingHandlers.MovementDetectors.SiarheiKuchukMovementDetector, HDE.IpCamClientServer.Server.Core" />
     <add key="MovementDetector.Parameters" value="DEBUG;K=3;N=8;M=1;Llow=0.5;Lstd=0.05;Lncc=0.98;TrainingFrames=1000;MinimumDetectionWidthPixels=6;MinimumDetectionHeightPixels=4;MaximumDetectionWidthPixels=20;MaximumDetectionHeightPixels=100;" />
+
+    <!-- Julio Claudio Soraia Movement Detector -->
+    <!--<add key="MovementDetector.Type" value="HDE.IpCamClientServer.Server.Core.ImageProcessingHandlers.MovementDetectors.JulioClaudioSoraiaMovementDetector, HDE.IpCamClientServer.Server.Core" />
+    <add key="MovementDetector.Parameters" value="DEBUG;K=2;N=8;M=1;Llow=0.5;Lstd=0.05;Lncc=0.98;TrainingFrames=1000;MinimumDetectionWidthPixels=6;MinimumDetectionHeightPixels=4;MaximumDetectionWidthPixels=20;MaximumDetectionHeightPixels=100;" /> -->
+    
   </appSettings>
   <startup useLegacyV2RuntimeActivationPolicy="true">
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/>
