--- a/src/Server/HDE.IpCamClientServer.Server.ServerC/app.config
+++ b/src/Server/HDE.IpCamClientServer.Server.ServerC/app.config
@@ -13,13 +13,21 @@
     - Siarhei Kuchuk Movement Detector
     - Julio Claudio Soraia Movement Detector
     -->
+    <!-- Siarhei Kuchuk Movement Detector (Abandoned Baggage Detection - EASY.AVI)  -->
+    <add key="MovementDetector.Type" value="HDE.IpCamClientServer.Server.Core.ImageProcessingHandlers.MovementDetectors.SiarheiKuchukMovementDetector, HDE.IpCamClientServer.Server.Core" />
+    <add key="MovementDetector.Parameters" value="DEBUG;ClosingOpeningMatrixSize=4;comparisonCCoefficient=3;K=3;N=2;M=1;Llow=0.5;Lstd=0.05;Lncc=0.98;TrainingFrames=600;MinimumDetectionWidthPixels=30;MinimumDetectionHeightPixels=30;MaximumDetectionWidthPixels=200;MaximumDetectionHeightPixels=350;" />
+
+    <!-- Julio Claudio Soraia Movement Detector (Abandoned Baggage Detection - EASY.AVI) 
+    <add key="MovementDetector.Type" value="HDE.IpCamClientServer.Server.Core.ImageProcessingHandlers.MovementDetectors.JulioClaudioSoraiaMovementDetector, HDE.IpCamClientServer.Server.Core" />
+    <add key="MovementDetector.Parameters" value="DEBUG;K=2;N=2;M=1;Llow=0.5;Lstd=0.05;Lncc=0.98;TrainingFrames=600;MinimumDetectionWidthPixels=30;MinimumDetectionHeightPixels=30;MaximumDetectionWidthPixels=500;MaximumDetectionHeightPixels=500;" /> -->
+    
     <!-- Siarhei Kuchuk Movement Detector (C29M4H3-Training Data Set-Stripped640x480Fps15) 
     <add key="MovementDetector.Type" value="HDE.IpCamClientServer.Server.Core.ImageProcessingHandlers.MovementDetectors.SiarheiKuchukMovementDetector, HDE.IpCamClientServer.Server.Core" />
     <add key="MovementDetector.Parameters" value="DEBUG;ClosingOpeningMatrixSize=3;K=2;N=4;M=1;Llow=0.5;Lstd=0.05;Lncc=0.98;TrainingFrames=300;MinimumDetectionWidthPixels=1;MinimumDetectionHeightPixels=1;MaximumDetectionWidthPixels=100;MaximumDetectionHeightPixels=100;" />-->
     
-    <!-- Siarhei Kuchuk Movement Detector (SS101668)-->
+    <!-- Siarhei Kuchuk Movement Detector (SS101668) 
     <add key="MovementDetector.Type" value="HDE.IpCamClientServer.Server.Core.ImageProcessingHandlers.MovementDetectors.SiarheiKuchukMovementDetector, HDE.IpCamClientServer.Server.Core" />
-    <add key="MovementDetector.Parameters" value="DEBUG;ClosingOpeningMatrixSize=5;K=2;N=2;M=1;Llow=0.5;Lstd=0.05;Lncc=0.98;TrainingFrames=1000;MinimumDetectionWidthPixels=1;MinimumDetectionHeightPixels=1;MaximumDetectionWidthPixels=100;MaximumDetectionHeightPixels=100;" />
+    <add key="MovementDetector.Parameters" value="DEBUG;ClosingOpeningMatrixSize=3;comparisonCCoefficient=0;K=2;N=2;M=1;Llow=0.5;Lstd=0.05;Lncc=0.98;TrainingFrames=1000;MinimumDetectionWidthPixels=1;MinimumDetectionHeightPixels=1;MaximumDetectionWidthPixels=100;MaximumDetectionHeightPixels=100;" />-->
  
     <!-- Julio Claudio Soraia Movement Detector (C29M4H3-Training Data Set-Stripped640x480Fps15) 
     <add key="MovementDetector.Type" value="HDE.IpCamClientServer.Server.Core.ImageProcessingHandlers.MovementDetectors.JulioClaudioSoraiaMovementDetector, HDE.IpCamClientServer.Server.Core" />
