+ Security on Streets-33898 fixed (Add estimation training to DebugWindow)

--- a/src/Server/HDE.IpCamClientServer.Server.Core/HDE.IpCamClientServer.Server.Core.csproj
+++ b/src/Server/HDE.IpCamClientServer.Server.Core/HDE.IpCamClientServer.Server.Core.csproj
@@ -102,6 +102,7 @@
     <Compile Include="ImageProcessingHandlers\IHandler.cs" />
     <Compile Include="ImageProcessingHandlers\IInterceptor.cs" />
     <Compile Include="ImageProcessingHandlers\ImageHelper.cs" />
+    <Compile Include="ImageProcessingHandlers\MovementDetectors\IMovementDetectorBackgroundModel.cs" />
     <Compile Include="ImageProcessingHandlers\MovementDetectors\JulioClaudioSoraiaMovementDetector.cs" />
     <Compile Include="ImageProcessingHandlers\MovementDetectors\MovementDetectorBase.cs" />
     <Compile Include="ImageProcessingHandlers\MovementDetectors\SiarheiKuchukMovementDetector.cs" />
