--- a/src/Server/HDE.IpCamClientServer.Server.ServerC/HDE.IpCamClientServer.Server.ServerC.csproj
+++ b/src/Server/HDE.IpCamClientServer.Server.ServerC/HDE.IpCamClientServer.Server.ServerC.csproj
@@ -101,6 +101,8 @@
     <Compile Include="Controller\DebugInterceptor.cs" />
     <Compile Include="Controller\ImageSource.cs" />
     <Compile Include="Controller\NewFrameEventArgs.cs" />
+    <Compile Include="Controller\NewProgressEventArgs.cs" />
+    <Compile Include="Controller\NewStatusEventArgs.cs" />
     <Compile Include="Controller\OperationMode.cs" />
     <Compile Include="Controller\ServerController.cs" />
     <Compile Include="Model\ServerModel.cs" />
