--- a/src/Server/HDE.IpCamClientServer.Server.ServerC/app.config
+++ b/src/Server/HDE.IpCamClientServer.Server.ServerC/app.config
@@ -15,7 +15,7 @@
     -->
     <!-- Siarhei Kuchuk Movement Detector (Abandoned Baggage Detection - EASY.AVI)  -->
     <add key="MovementDetector.Type" value="HDE.IpCamClientServer.Server.Core.ImageProcessingHandlers.MovementDetectors.SiarheiKuchukMovementDetector, HDE.IpCamClientServer.Server.Core" />
-    <add key="MovementDetector.Parameters" value="DEBUG;ClosingOpeningMatrixSize=4;comparisonCCoefficient=3;K=3;N=2;M=1;Llow=0.5;Lstd=0.05;Lncc=0.98;TrainingFrames=600;MinimumDetectionWidthPixels=30;MinimumDetectionHeightPixels=30;MaximumDetectionWidthPixels=200;MaximumDetectionHeightPixels=350;" />
+    <add key="MovementDetector.Parameters" value="DEBUG;comparisonCCoefficient=1;K=2;N=2;M=1;Llow=0.5;Lstd=0.05;Lncc=0.98;TrainingFrames=600;MinimumDetectionWidthPixels=30;MinimumDetectionHeightPixels=30;MaximumDetectionWidthPixels=200;MaximumDetectionHeightPixels=350;" />
 
     <!-- Julio Claudio Soraia Movement Detector (Abandoned Baggage Detection - EASY.AVI) 
     <add key="MovementDetector.Type" value="HDE.IpCamClientServer.Server.Core.ImageProcessingHandlers.MovementDetectors.JulioClaudioSoraiaMovementDetector, HDE.IpCamClientServer.Server.Core" />
