+ Security on Streets-33900 fixed (Debug views ordering is not applied)

--- a/src/Server/HDE.IpCamClientServer.Server.ServerC/app.config
+++ b/src/Server/HDE.IpCamClientServer.Server.ServerC/app.config
@@ -13,27 +13,42 @@
     - Siarhei Kuchuk Movement Detector
     - Julio Claudio Soraia Movement Detector
     -->
-    <!-- Siarhei Kuchuk Movement Detector (Abandoned Baggage Detection - EASY.AVI)  -->
-    <add key="MovementDetector.Type" value="HDE.IpCamClientServer.Server.Core.ImageProcessingHandlers.MovementDetectors.SiarheiKuchukMovementDetector, HDE.IpCamClientServer.Server.Core" />
-    <add key="MovementDetector.Parameters" value="DEBUG;comparisonCCoefficient=1;K=2;N=2;M=1;Llow=0.5;Lstd=0.05;Lncc=0.98;TrainingFrames=600;MinimumDetectionWidthPixels=30;MinimumDetectionHeightPixels=30;MaximumDetectionWidthPixels=200;MaximumDetectionHeightPixels=350;" />
 
-    <!-- Julio Claudio Soraia Movement Detector (Abandoned Baggage Detection - EASY.AVI) 
+    <!-- Data Set ______hall_monitor.mpg_____  -->
+    <!-- Siarhei Kuchuk
+    <add key="MovementDetector.Type" value="HDE.IpCamClientServer.Server.Core.ImageProcessingHandlers.MovementDetectors.SiarheiKuchukMovementDetector, HDE.IpCamClientServer.Server.Core" />
+    <add key="MovementDetector.Parameters" value="DEBUG;comparisonCCoefficient=1;K=2;N=2;M=1;Llow=0.5;Lstd=0.05;Lncc=0.98;TrainingFrames=20;MinimumDetectionWidthPixels=30;MaximumDetectionWidthPixels=65;MinimumDetectionHeightPixels=70;MaximumDetectionHeightPixels=110;" />-->
+
+    <!-- Julio Claudio Soraia-->
+    <add key="MovementDetector.Type" value="HDE.IpCamClientServer.Server.Core.ImageProcessingHandlers.MovementDetectors.JulioClaudioSoraiaMovementDetector, HDE.IpCamClientServer.Server.Core" />
+    <add key="MovementDetector.Parameters" value="DEBUG;K=2;N=2;M=1;Llow=0.5;Lstd=0.05;Lncc=0.98;TrainingFrames=40;MinimumDetectionWidthPixels=30;MaximumDetectionWidthPixels=65;MinimumDetectionHeightPixels=70;MaximumDetectionHeightPixels=110;" /> 
+    
+    <!-- Data Set ______Abandoned Baggage Detection - EASY_____  -->
+    <!-- Siarhei Kuchuk
+    <add key="MovementDetector.Type" value="HDE.IpCamClientServer.Server.Core.ImageProcessingHandlers.MovementDetectors.SiarheiKuchukMovementDetector, HDE.IpCamClientServer.Server.Core" />
+    <add key="MovementDetector.Parameters" value="DEBUG;comparisonCCoefficient=1;K=2;N=2;M=1;Llow=0.5;Lstd=0.05;Lncc=0.98;TrainingFrames=600;MinimumDetectionWidthPixels=30;MinimumDetectionHeightPixels=30;MaximumDetectionWidthPixels=200;MaximumDetectionHeightPixels=350;" />-->
+
+    <!-- Julio Claudio Soraia
     <add key="MovementDetector.Type" value="HDE.IpCamClientServer.Server.Core.ImageProcessingHandlers.MovementDetectors.JulioClaudioSoraiaMovementDetector, HDE.IpCamClientServer.Server.Core" />
     <add key="MovementDetector.Parameters" value="DEBUG;K=2;N=2;M=1;Llow=0.5;Lstd=0.05;Lncc=0.98;TrainingFrames=600;MinimumDetectionWidthPixels=30;MinimumDetectionHeightPixels=30;MaximumDetectionWidthPixels=500;MaximumDetectionHeightPixels=500;" /> -->
+
+    <!-- Data Set ______C29M4H3-Training Data Set-Stripped640x480Fps15_____  -->
     
-    <!-- Siarhei Kuchuk Movement Detector (C29M4H3-Training Data Set-Stripped640x480Fps15) 
+    <!-- Siarhei Kuchuk
     <add key="MovementDetector.Type" value="HDE.IpCamClientServer.Server.Core.ImageProcessingHandlers.MovementDetectors.SiarheiKuchukMovementDetector, HDE.IpCamClientServer.Server.Core" />
     <add key="MovementDetector.Parameters" value="DEBUG;ClosingOpeningMatrixSize=3;K=2;N=4;M=1;Llow=0.5;Lstd=0.05;Lncc=0.98;TrainingFrames=300;MinimumDetectionWidthPixels=1;MinimumDetectionHeightPixels=1;MaximumDetectionWidthPixels=100;MaximumDetectionHeightPixels=100;" />-->
     
-    <!-- Siarhei Kuchuk Movement Detector (SS101668) 
-    <add key="MovementDetector.Type" value="HDE.IpCamClientServer.Server.Core.ImageProcessingHandlers.MovementDetectors.SiarheiKuchukMovementDetector, HDE.IpCamClientServer.Server.Core" />
-    <add key="MovementDetector.Parameters" value="DEBUG;ClosingOpeningMatrixSize=3;comparisonCCoefficient=0;K=2;N=2;M=1;Llow=0.5;Lstd=0.05;Lncc=0.98;TrainingFrames=1000;MinimumDetectionWidthPixels=1;MinimumDetectionHeightPixels=1;MaximumDetectionWidthPixels=100;MaximumDetectionHeightPixels=100;" />-->
- 
-    <!-- Julio Claudio Soraia Movement Detector (C29M4H3-Training Data Set-Stripped640x480Fps15) 
+    <!-- Julio Claudio Soraia
     <add key="MovementDetector.Type" value="HDE.IpCamClientServer.Server.Core.ImageProcessingHandlers.MovementDetectors.JulioClaudioSoraiaMovementDetector, HDE.IpCamClientServer.Server.Core" />
     <add key="MovementDetector.Parameters" value="DEBUG;K=3;N=4;M=1;Llow=0.5;Lstd=0.05;Lncc=0.98;TrainingFrames=400;MinimumDetectionWidthPixels=2;MinimumDetectionHeightPixels=2;MaximumDetectionWidthPixels=300;MaximumDetectionHeightPixels=500;" />-->
+
+    <!-- Data Set ______SS101668_____  -->
     
-    <!-- Julio Claudio Soraia Movement Detector (SS101668)
+    <!-- Siarhei Kuchuk
+    <add key="MovementDetector.Type" value="HDE.IpCamClientServer.Server.Core.ImageProcessingHandlers.MovementDetectors.SiarheiKuchukMovementDetector, HDE.IpCamClientServer.Server.Core" />
+    <add key="MovementDetector.Parameters" value="DEBUG;comparisonCCoefficient=0;K=2;N=2;M=1;Llow=0.5;Lstd=0.05;Lncc=0.98;TrainingFrames=1000;MinimumDetectionWidthPixels=1;MinimumDetectionHeightPixels=1;MaximumDetectionWidthPixels=100;MaximumDetectionHeightPixels=100;" />-->
+    
+    <!-- Julio Claudio Soraia
     <add key="MovementDetector.Type" value="HDE.IpCamClientServer.Server.Core.ImageProcessingHandlers.MovementDetectors.JulioClaudioSoraiaMovementDetector, HDE.IpCamClientServer.Server.Core" />
     <add key="MovementDetector.Parameters" value="DEBUG;K=3;N=8;M=1;Llow=0.5;Lstd=0.05;Lncc=0.98;TrainingFrames=700;MinimumDetectionWidthPixels=2;MinimumDetectionHeightPixels=2;MaximumDetectionWidthPixels=300;MaximumDetectionHeightPixels=500;" />-->
   </appSettings>
